--- a/package.json
+++ b/package.json
@@ -14,10 +14,12 @@
     "@heroicons/react": "^2.1.1",
     "@reduxjs/toolkit": "^2.2.1",
     "axios": "^1.6.7",
+    "razorpay": "^2.9.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-redux": "^9.1.0",
     "react-router-dom": "^6.22.2",
+    "react-toastify": "^10.0.4",
     "redux": "^5.0.1"
   },
   "devDependencies": {
